# sdl-game-dev

./: .gitignore  CMakeLists.txt
src/: game.cpp  game.h  main.cpp
